Publish public discovery and client kit v1.0.3
